# routes/cart_routes.js
@@ -1,15 +1,11 @@
 const router=require('express').Router()
 
-const {addBaitToCart, decrementBaitQuantity, removeBaitFromCart, getCartCount, getCart} = require('../controllers/cart_controller');
+const {addBaitToCart, decrementBaitQuantity, removeCartItem, getCartCount, getCart} = require('../controllers/cart_controller');
 
-router.post('/bait/:baitID',addBaitToCart);
-
-router.get('/bait/decrement/:cartID',decrementBaitQuantity);
-
-router.delete('/bait/remove/:baitID',removeBaitFromCart);
-
-router.get('/count',getCartCount);
-
-router.get('/bait/:cartID',getCart)
+router.post('/bait/add/:baitID',addBaitToCart);
+router.get('/bait/decrement/:baitID',decrementBaitQuantity);
+router.delete('/bait/remove/:baitID',removeCartItem);
+router.get('/bait/count',getCartCount);
+router.get('/bait',getCart);
 
 module.exports=router
